
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"        
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" 
  		android:background="@drawable/layout_background"
        android:padding="2dp" >
        
        <Button
            style="@style/button"
            android:drawableRight="@drawable/btnmicrophone"
        	android:id="@+id/btnSpeak"
        	android:layout_weight=".30"
        	android:text="@string/XML_STT"
        	android:layout_marginBottom="2dp"
        	android:paddingRight="20dp"
        	android:textSize="35dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
		android:layout_marginBottom="2dp"
		android:background="#00000000"
        android:orientation="horizontal" >        
	        <Button
	            style="@style/button"
		        android:id="@+id/btnReply1"
		        android:layout_height="match_parent"
		        android:layout_marginRight="1dp"
	        	android:layout_weight="0.5"
	        	android:text="@string/XML_QUICK_REPLY_1" />
	                
	        <Button
	            style="@style/button"
	            android:id="@+id/btnReply2"
		        android:layout_height="match_parent"		        
		        android:layout_marginLeft="1dp"
	            android:layout_weight="0.5"
	        	android:text="@string/XML_QUICK_REPLY_2" />
	</LinearLayout>
	
        <Button
            style="@style/button"
            android:drawableRight="@drawable/btncancel"
            android:id="@+id/btnCancel"
            android:shadowColor="#FF0000"
            android:layout_weight="0.20"
            android:text="@string/BUTTON_CANCEL"
        	android:paddingRight="20dp"
            android:textSize="40dp" />

    </LinearLayout>
